# Rocket-Chess

./: CMakeLists.txt  MakeFile.pro  main.cpp  run.bat  run.sh
model/: bitboard_utility.cpp  bitboard_utility.hpp
src/: board.cpp  board.hpp  main.cpp  piece.hpp  uci.cpp  uci.hpp
